[gd_scene load_steps=4 format=3 uid="uid://cn8u0dgt7dqqb"]

[ext_resource type="PackedScene" uid="uid://ddqqeynvuh6pc" path="res://upgrade_shop_item.tscn" id="1_7mt8f"]
[ext_resource type="Script" path="res://shop.gd" id="1_k64hr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n375p"]
bg_color = Color(0.223529, 0.223529, 0.223529, 1)

[node name="Shop" type="CanvasLayer"]
process_mode = 2
script = ExtResource("1_k64hr")

[node name="Panel" type="Panel" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
theme_override_styles/panel = SubResource("StyleBoxFlat_n375p")

[node name="Title" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -19.0
offset_top = 32.0
offset_right = 20.0
offset_bottom = 64.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 30
text = "Shop
"

[node name="UpgradesContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = -288.0
offset_right = 544.0
offset_bottom = -12.0
grow_vertical = 0

[node name="Item1" parent="Panel/UpgradesContainer" instance=ExtResource("1_7mt8f")]
layout_mode = 2

[node name="Item2" parent="Panel/UpgradesContainer" instance=ExtResource("1_7mt8f")]
layout_mode = 2

[node name="Item3" parent="Panel/UpgradesContainer" instance=ExtResource("1_7mt8f")]
layout_mode = 2

[node name="Item4" parent="Panel/UpgradesContainer" instance=ExtResource("1_7mt8f")]
layout_mode = 2

[node name="ShopControlsContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 1
offset_left = 320.0
offset_top = 120.0
offset_right = 832.0
offset_bottom = 192.0
theme_override_constants/separation = 0
alignment = 1

[node name="LeftButton" type="Button" parent="Panel/ShopControlsContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "<"

[node name="LeftGap" type="Control" parent="Panel/ShopControlsContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SpellName" type="Label" parent="Panel/ShopControlsContainer"]
layout_mode = 2
text = "Spell Name
"

[node name="RightGap" type="Control" parent="Panel/ShopControlsContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RightButton" type="Button" parent="Panel/ShopControlsContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = ">"

[node name="RerollButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -280.0
offset_top = 312.0
offset_right = -226.0
offset_bottom = 360.0
grow_horizontal = 2
text = "Reroll
"

[node name="StatsContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -539.0
offset_top = -288.0
grow_horizontal = 0
grow_vertical = 0

[node name="NextWaveButton" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 1000.0
offset_top = 16.0
offset_right = 1132.0
offset_bottom = 72.0
text = "Next Wave"

[node name="Money" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 16.0
offset_top = 16.0
offset_right = 56.0
offset_bottom = 39.0
theme_override_font_sizes/font_size = 24

[connection signal="pressed" from="Panel/ShopControlsContainer/LeftButton" to="." method="_on_left_button_pressed"]
[connection signal="pressed" from="Panel/ShopControlsContainer/RightButton" to="." method="_on_right_button_pressed"]
[connection signal="pressed" from="Panel/RerollButton" to="." method="_on_reroll_button_pressed"]
[connection signal="pressed" from="Panel/NextWaveButton" to="." method="_on_next_wave_button_pressed"]
